correct color of testimonial source to make it readable

--- a/themes/dreamrider/sass/_front-page.scss
+++ b/themes/dreamrider/sass/_front-page.scss
@@ -235,7 +235,7 @@
 
 .quote-source {
   font-size: 0.8rem;
-  color: $color_text-alternative3;
+  color: $color_text-alternative4;
   letter-spacing: 2px;
   line-height: 2;
 }
